# michael-NodeCode

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile.backend  Dockerfile.database  Dockerfile.frontend  Dockerfile.testing  README.md  docker-build-compose.yml  docker-compose.yml  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  kuzu_macos_compatibility.patch  macos_build.yml  windows_build.yml
docker/linux/AMD64/: Dockerfile
docker/linux/ARM/: Dockerfile
docker/mac/: Dockerfile
docker/windows/: Dockerfile
public/: robots.txt
public/favicons/: site.webmanifest
src/: App.tsx  NotFound.tsx  Routes.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: greet.rs  mod.rs  node.rs  person.rs
src-tauri/src/db/: create_db.rs  db.rs  mod.rs
src-tauri/src/migrations/: schema.rs
src-tauri/src/types/: mod.rs  node_types.rs  person_types.rs
src/app/: App.tsx  StoreProvider.tsx  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/log/: route.ts
src/app/blocknote-editor/: main-editor.tsx  new-editor.tsx
src/app/blocknote-editor/editor/: NaviagetButton.tsx
src/app/components/: Sidebar.tsx  header.tsx
src/app/custom-editor/: InternalLink.tsx
src/app/editor/: CustomListItem.tsx  InternalLink.tsx  editor.ts
src/app/editor/provider/: collection.ts  provider.ts
src/app/node/[id]/: page.tsx
src/app/pages/: node-dynamic.tsx
src/components/: EditorContainer.tsx  EditorProvider.tsx  Sidebar.tsx  Sidebar2.tsx  TopBar.tsx  footer.tsx  header.tsx  sidebar.tsx
src/components/editor/: NaviagetButton.tsx  NavigateToBlock.tsx  ResetBlockTypeItem.tsx
src/constants/: index.ts
src/editor/: context.ts  editor.ts
src/editor/blocknote/: Page.tsx
src/editor/custom/: CollapsableListItem.tsx  InternalLink.tsx
src/node/: Page.tsx
src/redux/: dateSlice.ts  hooks.ts  nodeSlice.ts  store.ts  titleSlice.ts
src/sections/: maineditor.tsx  neweditor.tsx
src/styles/: globals.css
src/types/: node.ts
src/utils/: build-node-structure.ts  editor.tsx  logger.ts  node-converter.ts  node-sorter.ts  store.ts
