[package]
name = "nodecode"
version = "1.1.0"
description = "nodecode"
authors = ["mstomar"]
license = ""
repository = "nodecodeapp/NodeCodeDesktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
lazy_static = "1.5.0"
tauri-plugin-shell = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
kuzu = { version = "0.6.1", path = "/usr/local/lib" }

[target.'cfg(target_os = "windows")'.dependencies]
kuzu = "0.6.1"
