[package]
name = "nodecode"
version = "1.5.0"
description = "nodecode"
authors = ["mstomar"]
license = "Apache-2.0"
repository = "nodecodeapp/NodeCodeDesktop"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nodecode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2.1.0"

surrealdb = { version = "2.1.4", features = ["kv-mem", "kv-rocksdb"] }
tokio = { version = "1.28.2", features = ["full", "macros", "rt-multi-thread"] }

